--- a/src/app/components/app-header/app-header.component.html
+++ b/src/app/components/app-header/app-header.component.html
@@ -6,7 +6,5 @@
   <button class="navbar-toggler d-md-down-none mr-auto" type="button" appSidebarToggler>
     <span class="navbar-toggler-icon"></span>
   </button>
-  <button class="navbar-toggler d-md-down-none" type="button" appAsideMenuToggler>
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  <button class="logout" *ngIf="auth.isAuthenticated()" (click)="auth.logout()"><i class="fa fa-sign-out fa-lg mt-4"></i>Logout</button>
 </header>
