TEN-57. Minor. Create user module.

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -26,3 +26,10 @@
 
 //spinners
 @import "node_modules/spinkit/scss/spinkit";
+
+//global classes
+@import "general";
+
+//timezone
+@import "node_modules/select2/src/scss/core"
+
