--- a/src/app/modules/authorization/login/login.component.html
+++ b/src/app/modules/authorization/login/login.component.html
@@ -13,7 +13,7 @@
                             <form name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
                                 <div class="input-group mb-3"
                                      [ngClass]="{ 'has-error': f.submitted && !username.valid }">
-                                    <span class="input-group-addon"><i class="icon-user"></i></span>
+                                    <span class="input-group-addon"><i class="icon-user icons"></i></span>
                                     <input type="text" class="form-control" placeholder="Username" name="username"
                                            [(ngModel)]="model.username" #username="ngModel" required/>
                                     <div *ngIf="f.submitted && !username.valid" class="help-block">Username is
