--- a/src/app/containers/full-layout/full-layout.component.html
+++ b/src/app/containers/full-layout/full-layout.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+<toaster-container></toaster-container>
 <div class="app-body">
   <app-sidebar></app-sidebar>
   <!-- Main content -->
