--- a/src/app/pages/create-user/create-user.component.html
+++ b/src/app/pages/create-user/create-user.component.html
@@ -22,15 +22,15 @@
 
             <div class="row">
                 <div class="col-xs-12 col-sm-6">
-                    <label for="fullName" class="col-form-label">Full name:</label>
+                    <label for="fullname" class="col-form-label">Full name:</label>
                     <div class="">
-                        <input type="text" formControlName="fullName" class="form-control" id="fullName" placeholder="">
+                        <input type="text" formControlName="fullname" class="form-control" id="fullname" placeholder="">
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6">
-                    <label for="displayName" class="col-form-label">Display name:</label>
+                    <label for="display_name" class="col-form-label">Display name:</label>
                     <div class="">
-                        <input type="text" formControlName="displayName" class="form-control" id="displayName" placeholder="">
+                        <input type="text" formControlName="display_name" class="form-control" id="display_name" placeholder="">
                     </div>
                 </div>
             </div>
@@ -42,26 +42,20 @@
                         <input type="text" formControlName="company" class="form-control" id="company" placeholder="">
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-6">
-                    <label for="department" class="col-form-label">Department:</label>
-                    <div class="">
-                        <input type="text" formControlName="department" class="form-control" id="department" placeholder="">
-                    </div>
-                </div>
             </div>
 
             <div class="row">
                 <div class="col-xs-12 col-sm-6">
-                    <label for="email_contact" class="col-form-label">Email:</label>
+                    <label for="user_mail" class="col-form-label">Email:</label>
                     <div class="">
-                        <input type="email" formControlName="email_contact" class="form-control" id="email_contact" placeholder="">
+                        <input type="email" class="form-control" id="user_mail" placeholder="">
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6">
                     <label class="col-form-label">Time Zone:</label>
                     <div class="">
-                        <input type="text" formControlName="time_zone" class="form-control" id="time_zone" placeholder="">
-                        <!--<ng2-timezone-picker  (countryChange)="countryIsoCode = $event" [(country)]="countryIsoCode" [(timezone)]="timezone" showOffset="true"></ng2-timezone-picker>-->
+                        <!--<input type="text" formControlName="timezone" class="form-control" id="timezone" placeholder="">-->
+                        <ng2-timezone-picker  (change)="changeTimezone($event)" [(timezone)]="timezone" showOffset="true"></ng2-timezone-picker>
                     </div>
                 </div>
             </div>
