TEN-57. Create user module. Notify

--- a/src/app/modules/authorization/login/login.component.html
+++ b/src/app/modules/authorization/login/login.component.html
@@ -1,6 +1,4 @@
-﻿<toaster-container></toaster-container>
-
-<div *ngIf="!authConfirm" class="app flex-row align-items-center">
+﻿<div *ngIf="!authConfirm" class="app flex-row align-items-center">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-xs-12 col-sm-8 col-md-6 col-lg-5">
