TEN-59. Addon. user create contacts refactor.

--- a/src/app/pages/create-user/create-user.component.html
+++ b/src/app/pages/create-user/create-user.component.html
@@ -46,9 +46,9 @@
 
             <div class="row">
                 <div class="col-xs-12 col-sm-6">
-                    <label for="user_mail" class="col-form-label">Email:</label>
+                    <label for="contacts" class="col-form-label">Email:</label>
                     <div class="">
-                        <input type="email" class="form-control" id="user_mail" placeholder="">
+                        <input type="email" class="form-control" id="contacts" name="contacts" formControlName="contacts" placeholder="">
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6">
