--- a/src/app/containers/full-layout/full-layout.component.html
+++ b/src/app/containers/full-layout/full-layout.component.html
@@ -9,6 +9,8 @@
     </ol>
     <div class="container-fluid">
       <router-outlet></router-outlet>
+
+      <app-spinner></app-spinner>
     </div><!-- /.conainer-fluid -->
   </main>
   <app-aside></app-aside>
