--- a/src/app/modules/authorization/login/styles.scss
+++ b/src/app/modules/authorization/login/styles.scss
@@ -54,3 +54,16 @@ label{
 a{
     color: rgba(97,96,97,1);
 }
+
+
+.login-form{
+    .logo{
+        margin-top: -20px;
+        margin-bottom: 20px;
+    }
+    i{
+        margin-top: 7px;
+        font-size: 18px;
+        color: #636363;
+    }
+}
