--- a/src/app/modules/authorization/login/login.component.html
+++ b/src/app/modules/authorization/login/login.component.html
@@ -1,17 +1,19 @@
-﻿<div *ngIf="!authConfirm" class="app flex-row align-items-center">
+﻿<div *ngIf="!authConfirm" class="app flex-row align-items-center login-form">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-xs-12 col-sm-8 col-md-6 col-lg-5">
                 <div class="card-group mb-0">
                     <div class="card p-4">
                         <div class="card-body">
-                            <h1>Login</h1>
+                            <div class="logo">
+                                <img src="assets/img/ts-logo.jpeg" alt="Tenderscout admin"/>
+                            </div>
                             <p class="text-muted">Sign In to your account</p>
                             <!--loginForm-->
                             <form name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
                                 <div class="input-group mb-3"
                                      [ngClass]="{ 'has-error': f.submitted && !username.valid }">
-                                    <span class="input-group-addon"><i class="icon-user icons"></i></span>
+                                    <span class="input-group-addon"><i class="fa fa-user"></i></span>
                                     <input type="text" class="form-control" placeholder="Username" name="username"
                                            [(ngModel)]="model.username" #username="ngModel" required/>
                                     <div *ngIf="f.submitted && !username.valid" class="help-block">Username is
@@ -20,7 +22,7 @@
                                 </div>
                                 <div class="input-group mb-4"
                                      [ngClass]="{ 'has-error': f.submitted && !password.valid }">
-                                    <span class="input-group-addon"><i class="icon-lock"></i></span>
+                                    <span class="input-group-addon"><i class="fa fa-lock"></i></span>
                                     <input type="password" class="form-control" placeholder="Password" name="password"
                                            [(ngModel)]="model.password" #password="ngModel" required/>
                                     <div *ngIf="f.submitted && !password.valid" class="help-block">Password is
