--- a/src/app/modules/spinner/spinner.component.scss
+++ b/src/app/modules/spinner/spinner.component.scss
@@ -3,15 +3,19 @@
     position: fixed;
     width: 100%;
     height: 100%;
-    z-index: 999;
+    z-index: 1022;
     top: 0;
     left: 0;
 
     .spinner {
         width: 40px;
         height: 40px;
-        background-color: #ff0000;
-        margin: 30% auto;
+        background-color: #d66166;
+        left: 50%;
+        top: 50%;
+        margin-top: -20px;
+        margin-left: -20px;
+        position: absolute;
         -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
         animation: sk-rotateplane 1.2s infinite ease-in-out;
     }
