--- a/src/app/pages/create-user/create-user.component.html
+++ b/src/app/pages/create-user/create-user.component.html
@@ -63,9 +63,9 @@
             <div class="form-group row margin-t20">
                 <div class="col-12">
                     <button type="submit" class="btn btn-primary">Create</button>
+                    <a routerLink="/users-list" class="btn btn-secondary">Cancel</a>
                 </div>
             </div>
-
         </form>
     </div>
 </div>
