--- a/src/app/components/app-header/app-header.component.html
+++ b/src/app/components/app-header/app-header.component.html
@@ -6,4 +6,5 @@
   <button class="navbar-toggler d-md-down-none mr-auto" type="button" appSidebarToggler>
     <span class="navbar-toggler-icon"></span>
   </button>
+  <div class="float-right margin-r15 logout"><a href="#" (click)="logout()" title=" Log out"><i class="fas fa-sign-out-alt"></i></a></div>
 </header>
