--- a/src/app/pages/dictionaries/components/countries/countries.component.html
+++ b/src/app/pages/dictionaries/components/countries/countries.component.html
@@ -1,3 +1,4 @@
-<p>
-  countries works!
-</p>
+<div class="card-header">
+  <h3>Countries dictionary</h3>
+</div>
+<ng2-smart-table class="table table-striped" [settings]="settings" [source]="countriesDict"></ng2-smart-table>
