New modules steucture and routing. New endpoint. New api urls. Signup req working module.

--- a/src/app/pages/users/components/users-list/users-list.component.html
+++ b/src/app/pages/users/components/users-list/users-list.component.html
@@ -1,5 +1,5 @@
 <div class="card-header">
     <h3>Users list</h3>
-    <button type="button" class="create-user btn btn-primary float-right" [routerLink]="['/create-user']"><i class="fas fa-user-plus"></i>Create new user</button>
+    <button type="button" class="create-user btn btn-primary float-right" [routerLink]="['/users/create']"><i class="fas fa-user-plus"></i>Create new user</button>
 </div>
 <ng2-smart-table class="table table-striped" [settings]="settings" [source]="usersList"></ng2-smart-table>
