TEN-74. Minor. Button hover Style

--- a/src/app/pages/users/components/signup-request-list/details/details.component.scss
+++ b/src/app/pages/users/components/signup-request-list/details/details.component.scss
@@ -35,5 +35,8 @@ a{
         height: 30px;
         font-size: 13px;
         color: grey;
+        &:hover{
+            color: #fff;
+        }
     }
 }
