TEN-74. Minor. Header bg

--- a/src/scss/core/_layout.scss
+++ b/src/scss/core/_layout.scss
@@ -19,7 +19,7 @@ app-root {
   flex: 0 0 $navbar-height;
   .logout{
     a{
-      color: #3e515b;
+      color: #fff;
       font-size: 18px;
     }
   }
