--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -3,7 +3,7 @@
 
 $enable-sidebar-nav-rounded:          false !default;
 
-$border-color:                        $gray-200 !default;
+$border-color:                        #cb393f !default;
 $layout-transition-speed:             .25s !default;
 
 // Social Colors
@@ -38,7 +38,7 @@ $vimeo:                               #aad450 !default;
 // Navbar
 
 $navbar-height:                       55px !default;
-$navbar-bg:                           #fff !default;
+$navbar-bg:                           #d66166 !default;
 $navbar-border: (
   bottom: (
     size:                             1px,
