TEN-128. Industries dictionary. + Codes dist refactor

--- a/src/app/pages/dictionaries/components/codes/codes.component.html
+++ b/src/app/pages/dictionaries/components/codes/codes.component.html
@@ -1,4 +1,4 @@
 <div class="card-header">
-  <h3>Countries dictionary</h3>
+  <h3>Codes dictionary</h3>
 </div>
-<ng2-smart-table class="table table-striped" [settings]="settings" [source]="countriesDict"></ng2-smart-table>
+<ng2-smart-table class="table table-striped" [settings]="settings" [source]="codesDict"></ng2-smart-table>
