--- a/src/app/pages/users/components/create-user/create-user.component.html
+++ b/src/app/pages/users/components/create-user/create-user.component.html
@@ -42,28 +42,38 @@
                         <input type="text" formControlName="company" class="form-control" id="company" placeholder="">
                     </div>
                 </div>
-            </div>
 
-            <div class="row">
-                <div class="col-xs-12 col-sm-6">
-                    <label for="contacts" class="col-form-label">Email:</label>
-                    <div class="">
-                        <input type="email" class="form-control" id="contacts" name="contacts" formControlName="contacts" placeholder="">
-                    </div>
-                </div>
                 <div class="col-xs-12 col-sm-6">
                     <label class="col-form-label">Time Zone:</label>
                     <div class="">
-                        <!--<input type="text" formControlName="timezone" class="form-control" id="timezone" placeholder="">-->
-                        <ng2-timezone-picker  (change)="changeTimezone($event)" [(timezone)]="timezone" showOffset="true"></ng2-timezone-picker>
+                        <ng2-timezone-picker [disabled]="profileForm.disabled"  (change)="changeTimezone($event)" [(timezone)]="timezone" showOffset="true"></ng2-timezone-picker>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row contacts">
+                <div class="title col-xs-12 col-sm-12">
+                    <h3>Contacts</h3>
+                </div>
+                <div *ngFor="let type of contactsTypes" class="col-xs-12 col-sm-6">
+                    <label class="col-form-label">{{ type }}</label>
+                    <div class="contact" formArrayName="contacts" *ngFor="let contact of profileForm.get('contacts').controls; let i = index;">
+                        <div *ngIf="contact.value.contact_type == type">
+                            <div class="contact-line" [formGroupName]="i">
+                                <input class="form-control" type="{{(type == 'phone') ? 'tel' : 'email'}}" formControlName="value">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
 
             <div class="form-group row margin-t20">
-                <div class="col-12">
-                    <button type="submit" class="btn btn-primary">Create</button>
+                <div class="col-12" *ngIf="!created">
+                    <button type="submit" [disabled]="profileForm.invalid" class="btn btn-primary">Create</button>
                     <a routerLink="/users/list" class="btn btn-secondary">Cancel</a>
+                </div>
+                <div class="col-12" *ngIf="created">
+                    <a routerLink="/users/list" class="btn btn-secondary">Back</a>
                 </div>
             </div>
         </form>
