--- a/src/app/pages/users/components/create-user/create-user.component.html
+++ b/src/app/pages/users/components/create-user/create-user.component.html
@@ -51,6 +51,17 @@
                 </div>
             </div>
 
+            <div class="row">
+                <div class="col-xs-12 col-sm-6">
+                    <label for="role" class="col-form-label">Role:</label>
+                    <div>
+                        <select class="form-control" id="role" formControlName="role"  >
+                            <option *ngFor="let role of roles" [value]="role" >{{ role }}</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+
             <div class="row contacts">
                 <div class="title col-xs-12 col-sm-12">
                     <h3>Contacts</h3>
