--- a/src/app/pages/users/components/users-list/users-list.component.html
+++ b/src/app/pages/users/components/users-list/users-list.component.html
@@ -2,7 +2,7 @@
     <h3>Users list</h3>
     <button type="button" class="create-user btn btn-primary float-right" [routerLink]="['/users/create']"><i class="fas fa-user-plus"></i>Create new user</button>
 </div>
-<ng2-smart-table class="table table-striped" [settings]="settings" [source]="source"></ng2-smart-table>
+<ng2-smart-table class="table table-striped" [settings]="settings" [source]="source" (editConfirm)="onEditConfirm($event)"></ng2-smart-table>
 <pagination *ngIf="totalItems > 20"
             class="pagination-sm"
             (ngModel)="page"
