--- a/src/app/pages/users/components/request-upgrade/accept-request/accept-request.component.html
+++ b/src/app/pages/users/components/request-upgrade/accept-request/accept-request.component.html
@@ -1,1 +1,1 @@
-<a (click)="acceptRequest(rowData.id)" class="btn btn-block btn-success">Accept</a>
+<a (click)="acceptRequest(rowData.req_id)" class="btn btn-block btn-success">Accept</a>
