TEN-568. Userlist new structure.

--- a/src/app/pages/users/components/signup-request-list/details/details.component.html
+++ b/src/app/pages/users/components/signup-request-list/details/details.component.html
@@ -1,7 +1,7 @@
 <div class="modal-details">
-    <a class="btn btn-outline-primary" data-toggle="modal" (click)="infoModal.show()" title="Details">
+    <button class="btn btn-outline-primary" data-toggle="modal" [disabled]="blockBtn" (click)="infoModal.show()" title="Details">
         <i class="fas fa-info-circle margin-r10"></i>Details
-    </a>
+    </button>
     <div bsModal #infoModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg details-modal" role="document">
             <div class="modal-content">
