get new codes @G

--- a/src/app/pages/documents/components/documents-list/documents-list.component.html
+++ b/src/app/pages/documents/components/documents-list/documents-list.component.html
@@ -1,3 +1,36 @@
-<p>
-  documents-list works!
-</p>
+<div class="document_list-holder">
+    <div class="buttons-holder">
+        <button class="exclude_btn" role="button">Exclude Users</button>
+        <button class="upload_btn" role="button">Upload Docs</button>
+    </div>
+    <div class="list_contbx-holder">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="uploaded-files-holder">
+                    <div class="uploaded-filesbr">
+                        <div class="upload-iconbr">
+                            <span class="file-icon"><img src="assets/img/csv-icon.png"></span>
+                          </div>
+                <div class="upload-txbr">
+                    <span class="file-name" title="Active_Condo_s_Nov_13-converted.csv">Active_Condo_s_Nov_13-converted.csv</span>
+                    <span class="file-size">6.73 KB</span>
+                    <span class="file-cancel">
+                        <label class="dropdown">
+                            <div class="dd-button">
+                                <span ><img alt="" src="/assets/img/drop-img-blue.png" class="drop-open"></span>
+                            </div>
+                        <input class="dd-input" id="test" type="checkbox">
+                        <ul class="dd-menu">
+                            <li ><a > View/Download </a></li>
+                            <li class=""><a >Clone </a></li>
+                        </ul>
+                      </label>
+            </span>
+          </div>
+          <div class="clearfix"></div>
+        </div>
+      </div>
+            </div>
+        </div>
+    </div>
+</div>
