--- a/src/app/pages/documents/components/documents-list/documents-list.component.html
+++ b/src/app/pages/documents/components/documents-list/documents-list.component.html
@@ -1,158 +1,54 @@
 <div class="document_list-holder">
-    <div class="buttons-holder">
-        <button class="exclude_btn" role="button" (click)="excludeUsersOpenModal(excludeUsers)">Exclude Users</button>
-        <button class="upload_btn" role="button" (click)="uploadDocsOpenModal(uploadDocs)">Upload Docs</button>
-    </div>
+  <div class="buttons-holder">
+    <button class="exclude_btn" role="button" (click)="excludeUsersOpenModal(excludeUsers)">Exclude Users</button>
+    <button class="upload_btn" role="button" (click)="uploadDocsOpenModal(uploadDocs)">Upload Docs</button>
+  </div>
 
 
-    <div class="list_contbx-holder">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="uploaded-files-holder">
-                    <div class="uploaded-filesbr">
-                        <div class="upload-iconbr">
-                            <span class="file-icon"><img src="assets/img/csv-icon.png"></span>
-                          </div>
-                          <div class="upload-txbr">
-                              <span class="file-name" title="Active_Condo_s_Nov_13-converted.csv">Active_Condo_s_Nov_13-converted.csv</span>
-                              <span class="file-size">6.73 KB</span>
-                              <span class="file-cancel">
-                                  <label class="dropdown">
-                                      <div class="dd-button">
-                                          <span ><img alt="" src="/assets/img/drop-img-blue.png" class="drop-open"></span>
-                                      </div>
-                                  <input class="dd-input" id="test" type="checkbox">
-                                  <ul class="dd-menu">
-                                      <li ><a > View/Download </a></li>
-                                      <li class=""><a >Clone </a></li>
-                                  </ul>
-                                </label>
-                          </span>
-                        </div>
-                        <div class="clearfix"></div>
-                  </div>
-              </div>
-          </div>
-
-          <div class="col-md-6">
-              <div class="uploaded-files-holder">
-                  <div class="uploaded-filesbr">
-                      <div class="upload-iconbr">
-                          <span class="file-icon"><img src="assets/img/csv-icon.png"></span>
-                        </div>
-                        <div class="upload-txbr">
-                            <span class="file-name" title="Active_Condo_s_Nov_13-converted.csv">Active_Condo_s_Nov_13-converted.csv</span>
-                            <span class="file-size">6.73 KB</span>
-                            <span class="file-cancel">
-                                <label class="dropdown">
-                                    <div class="dd-button">
-                                        <span ><img alt="" src="/assets/img/drop-img-blue.png"></span>
-                                    </div>
-                                <input class="dd-input" id="test" type="checkbox">
-                                <!-- <ul class="dd-menu">
-                                    <li ><a > View/Download </a></li>
-                                    <li class=""><a >Clone </a></li>
-                                </ul> -->
-                              </label>
-                        </span>
-                      </div>
-                      <div class="clearfix"></div>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-md-6">
-            <div class="uploaded-files-holder">
-                <div class="uploaded-filesbr">
-                    <div class="upload-iconbr">
-                        <span class="file-icon"><img src="assets/img/csv-icon.png"></span>
-                      </div>
-                      <div class="upload-txbr">
-                          <span class="file-name" title="Active_Condo_s_Nov_13-converted.csv">Active_Condo_s_Nov_13-converted.csv</span>
-                          <span class="file-size">6.73 KB</span>
-                          <span class="file-cancel">
-                              <label class="dropdown">
-                                  <div class="dd-button">
-                                      <span ><img alt="" src="/assets/img/drop-img-blue.png"></span>
-                                  </div>
-                              <input class="dd-input" id="test" type="checkbox">
-                              <!-- <ul class="dd-menu">
-                                  <li ><a > View/Download </a></li>
-                                  <li class=""><a >Clone </a></li>
-                              </ul> -->
-                            </label>
-                      </span>
-                    </div>
-                    <div class="clearfix"></div>
-              </div>
-          </div>
+  <div class="list_contbx-holder">
+    <div class="row">
+      <div class="col-md-12 cstm_pdng">
+        <app-documents *ngFor="let document of documentsList" [document]="document"></app-documents>
       </div>
-
-      <div class="col-md-6">
-          <div class="uploaded-files-holder">
-              <div class="uploaded-filesbr">
-                  <div class="upload-iconbr">
-                      <span class="file-icon"><img src="assets/img/csv-icon.png"></span>
-                    </div>
-                    <div class="upload-txbr">
-                        <span class="file-name" title="Active_Condo_s_Nov_13-converted.csv">Active_Condo_s_Nov_13-converted.csv</span>
-                        <span class="file-size">6.73 KB</span>
-                        <span class="file-cancel">
-                            <label class="dropdown">
-                                <div class="dd-button">
-                                    <span ><img alt="" src="/assets/img/drop-img-blue.png"></span>
-                                </div>
-                            <input class="dd-input" id="test" type="checkbox">
-                            <!-- <ul class="dd-menu">
-                                <li ><a > View/Download </a></li>
-                                <li class=""><a >Clone </a></li>
-                            </ul> -->
-                          </label>
-                    </span>
-                  </div>
-                  <div class="clearfix"></div>
-            </div>
-        </div>
     </div>
 
-        </div>
-    </div>
-
+  </div>
 
 </div>
 
- 
-    <ng-template #uploadDocs>
-      <div class="modal-header">
-          <h4 class="modal-title pull-left">UPLOAD TO ORBIDAL -</h4>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-          <button type="button" class="close pull-right" aria-label="Close" (click)="uploadDocsModalRef.hide()">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <p class="chose_filetx">Choose File</p>
-          <input type="file" name="img" multiple>
-          <div class="button-holder">
-              <button class="upload_btn" role="button">Upload Doc</button>
-          </div>
-        </div>
-    </ng-template>
+
+<ng-template #uploadDocs>
+  <div class="modal-header">
+    <h4 class="modal-title pull-left">UPLOAD TO ORBIDAL -</h4>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+    <button type="button" class="close pull-right" aria-label="Close" (click)="uploadDocsModalRef.hide()">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <!-- <p class="chose_filetx">Choose Multiple Files</p>
+    <input type="file" name="img" (change)="handleFilesInput($event.target.files)" multiple>
+    <div class="button-holder">
+      <button class="upload_btn" role="button" (click)="uploadDocuments()">Upload Doc</button>
+    </div> -->
+    <file-uploader (onCompleteItem)="onCompleteItem($event)"></file-uploader>
+  </div>
+</ng-template>
 
 <ng-template #excludeUsers>
-    <div class="modal-header">
-        <h4 class="modal-title pull-left">UPLOAD TO ORBIDAL -</h4>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-        <button type="button" class="close pull-right" aria-label="Close" (click)="excludeUsersModalRef.hide()">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <div class="used-selectbr repo-used-selectbr">
-            <p>Folder:</p>
-        </div>
-        <div class="button-holder">
-            <button class="upload_btn" role="button">Upload Doc</button>
-        </div>
-      </div>
-  </ng-template>
+  <div class="modal-header">
+    <h4 class="modal-title pull-left">UPLOAD TO ORBIDAL -</h4>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+    <button type="button" class="close pull-right" aria-label="Close" (click)="excludeUsersModalRef.hide()">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <div class="used-selectbr repo-used-selectbr">
+      <p>Folder:</p>
+    </div>
+    <div class="button-holder">
+      <button class="upload_btn" role="button" (click)="uploadDocuments()">Upload Doc</button>
+    </div>
+  </div>
+</ng-template>
