--- a/src/app/pages/documents/components/documents-list/documents-list.component.html
+++ b/src/app/pages/documents/components/documents-list/documents-list.component.html
@@ -19,8 +19,8 @@
 
 <ng-template #uploadDocs>
   <div class="modal-header">
-    <h4 class="modal-title pull-left">UPLOAD TO ORBIDAL -</h4>
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+    <h4 class="modal-title pull-left">UPLOAD TO ORBIDAL FOR ALL USERS</h4>
+    <!-- <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p> -->
     <button type="button" class="close pull-right" aria-label="Close" (click)="uploadDocsModalRef.hide()">
       <span aria-hidden="true">&times;</span>
     </button>
