Updated code 22 July 19:02

--- a/src/app/pages/documents/components/documents-list/documents-list.component.html
+++ b/src/app/pages/documents/components/documents-list/documents-list.component.html
@@ -46,6 +46,10 @@
   <div class="modal-body">
     <div class="used-selectbr repo-used-selectbr">
       <p>Folder:</p>
+
+      <ng-multiselect-dropdown [placeholder]="'Select Users'" [data]="usersList" [(ngModel)]="selectedUsers"
+        [settings]="dropdownSettings" (onSelect)="onItemSelect($event)" (onSelectAll)="onSelectAll($event)">
+      </ng-multiselect-dropdown>
     </div>
     <div class="button-holder">
       <button class="upload_btn" role="button" (click)="uploadDocuments()">Upload Doc</button>
